k8s/apps/torrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun-deployment
  namespace: torrent
  labels:
    app: gluetun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: webui
          volumeMounts:
            - name: torrent-config
              mountPath: /config
            - name: torrent-data
              mountPath: /downloads
              subPath: qb/downloads
      volumes:
        - name: torrent-config
          persistentVolumeClaim:
            claimName: torrent-config-pvc
        - name: torrent-data
          persistentVolumeClaim:
            claimName: torrent-nfs-pvc
