k8s/apps/torrent/arr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arr-stack
  namespace: torrent
  labels:
    app: arr-stack
spec:
  selector:
    app: arr-stack
  ports:
    - name: sonarr
      port: 8989
      targetPort: 8989
    - name: radarr
      port: 7878
      targetPort: 7878
    - name: prowlarr
      port: 9696
      targetPort: 9696
