k8s/apps/torrent/prowlarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: torrent
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
