k8s/apps/torrent/radarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: torrent
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
