k8s/apps/torrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: torrent
spec:
  selector:
    app: gluetun
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
