k8s/apps/torrent/sonarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: torrent
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
